Bug 493008 - kwin_x11 crashes repeatedly when switching to certain window decorations
Summary: kwin_x11 crashes repeatedly when switching to certain window decorations
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-09-12 08:20 UTC by zzyym
Modified: 2024-09-19 15:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/56815/events/2c6d879f518747e697232d8d2e51723e/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zzyym 2024-09-12 08:20:35 UTC
Application: kwin_x11 ()

Qt Version: 6.7.2
Frameworks Version: 6.5.0
Operating System: Linux 6.10.9-2-cachyos-lto x86_64
Windowing System: X11
Distribution: "Arch Linux"
DrKonqi: 6.1.5 [CoredumpBackend]

-- Information about the crash:
The crash only happens in x11 mode, wayland mode works fine. 
Certain themes will cause the crash, such as built-in theme "Plastik", and most themes form the kde store.
Built-in theme "Breeze" and "Oxygen" do not cause the crash.

The crash can be reproduced every time.

-- Backtrace:
Application: kwin_x11 (kwin_x11), signal: Segmentation fault


This GDB supports auto-downloading debuginfo from the following URLs:
  <https://debuginfod.archlinux.org>
  <https://debuginfod.cachyos.org>
Enable debuginfod for this session? (y or [n]) [answered N; input not from terminal]
Debuginfod has been disabled.
To make this setting permanent, add 'set debuginfod enabled off' to .gdbinit.
[New LWP 2244]
[New LWP 2252]
[New LWP 2253]
[New LWP 2571]
[New LWP 2278]
[New LWP 2572]
[New LWP 3465]
[New LWP 2286]
[New LWP 2573]
[New LWP 2574]
[New LWP 4071]
[New LWP 4069]
[New LWP 3468]
[New LWP 3466]
[New LWP 3469]
[New LWP 3467]
[New LWP 3470]
[New LWP 3472]
[New LWP 4067]
[New LWP 3471]
[New LWP 4070]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
Core was generated by `/usr/bin/kwin_x11 --replace'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x00007a80e8aa23db in pthread_kill () from /usr/lib/libc.so.6
[Current thread is 1 (Thread 0x7a80d8815fc0 (LWP 2244))]
Cannot QML trace cores :(
[Current thread is 1 (Thread 0x7a80d8815fc0 (LWP 2244))]

Thread 21 (Thread 0x7a80bd0006c0 (LWP 4070)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 20 (Thread 0x7a80874006c0 (LWP 3471)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 19 (Thread 0x7a80bf4006c0 (LWP 4067)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80e7f6bddf in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007a80e7ef9f42 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007a80e93c2a2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e9155a6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e9249167 in QThread::run() () from /usr/lib/libQt6Core.so.6
#6  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#7  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#8  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 18 (Thread 0x7a8086a006c0 (LWP 3472)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 17 (Thread 0x7a807fe006c0 (LWP 3470)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 16 (Thread 0x7a808d8006c0 (LWP 3467)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 15 (Thread 0x7a8087e006c0 (LWP 3469)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 14 (Thread 0x7a808e2006c0 (LWP 3466)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 13 (Thread 0x7a808ce006c0 (LWP 3468)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 12 (Thread 0x7a80be0006c0 (LWP 4069)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80e7f6bddf in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007a80e7ef9f42 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007a80e93c2a2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e9155a6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e9249167 in QThread::run() () from /usr/lib/libQt6Core.so.6
#6  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#7  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#8  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 11 (Thread 0x7a80b30006c0 (LWP 4071)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80e7f6bddf in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007a80e7ef9f42 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007a80e93c2a2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e9155a6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e9249167 in QThread::run() () from /usr/lib/libQt6Core.so.6
#6  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#7  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#8  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7a80c6a006c0 (LWP 2574)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7a80c7e006c0 (LWP 2573)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7a809be006c0 (LWP 2286)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80d501cfb7 in ?? () from /usr/lib/libnvidia-glcore.so.560.35.03
#2  0x00007a80d4ffee04 in ?? () from /usr/lib/libnvidia-glcore.so.560.35.03
#3  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#4  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7a808ec006c0 (LWP 3465)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7a80c74006c0 (LWP 2572)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7a80c56006c0 (LWP 2278)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80e7f6bddf in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007a80e7ef9f42 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007a80e93c2a2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e9155a6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e9249167 in QThread::run() () from /usr/lib/libQt6Core.so.6
#6  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#7  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#8  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7a80c60006c0 (LWP 2571)):
#0  0x00007a80e8a9c6af in ?? () from /usr/lib/libc.so.6
#1  0x00007a80e8a9f672 in pthread_cond_timedwait () from /usr/lib/libc.so.6
#2  0x00007a80e92df00f in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt6Core.so.6
#3  0x00007a80e92e0188 in ?? () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7a80d76006c0 (LWP 2253)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80ec5783b3 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007a80ec57a72d in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007a80d81ae0c9 in ?? () from /usr/lib/qt6/plugins/platforms/../../../libQt6XcbQpa.so.6
#4  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#6  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7a80d80006c0 (LWP 2252)):
#0  0x00007a80e8b1427f in poll () from /usr/lib/libc.so.6
#1  0x00007a80e7f6bddf in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007a80e7ef9f42 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007a80e93c2a2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#4  0x00007a80e9155a6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#5  0x00007a80e924901f in QThread::exec() () from /usr/lib/libQt6Core.so.6
#6  0x00007a80ea96e7df in ?? () from /usr/lib/libQt6DBus.so.6
#7  0x00007a80e92d9aa0 in ?? () from /usr/lib/libQt6Core.so.6
#8  0x00007a80e8aa0386 in ?? () from /usr/lib/libc.so.6
#9  0x00007a80e8b21b0c in ?? () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7a80d8815fc0 (LWP 2244)):
[KCrash Handler]
#4  0x00007a80e9bad2f4 in QRhi::ubufAlignment() const () from /usr/lib/libQt6Gui.so.6
#5  0x00007a80eb67dfa1 in QSGBatchRenderer::Renderer::Renderer(QSGDefaultRenderContext*, QSGRendererInterface::RenderMode) () from /usr/lib/libQt6Quick.so.6
#6  0x00007a80eb6ccc5a in QSGDefaultRenderContext::createRenderer(QSGRendererInterface::RenderMode) () from /usr/lib/libQt6Quick.so.6
#7  0x00007a80eb64acd5 in QQuickWindowPrivate::syncSceneGraph() () from /usr/lib/libQt6Quick.so.6
#8  0x00007a80eb5dc065 in QQuickRenderControl::sync() () from /usr/lib/libQt6Quick.so.6
#9  0x00007a80ebe0cc09 in KWin::OffscreenQuickView::update() () from /usr/lib/libkwin.so.6
#10 0x00007a80e91afe6d in ?? () from /usr/lib/libQt6Core.so.6
#11 0x00007a80e91b7c54 in QTimer::timerEvent(QTimerEvent*) () from /usr/lib/libQt6Core.so.6
#12 0x00007a80e9198689 in QObject::event(QEvent*) () from /usr/lib/libQt6Core.so.6
#13 0x00007a80ea2fc64c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt6Widgets.so.6
#14 0x00007a80e914bad8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt6Core.so.6
#15 0x00007a80e92d6928 in QTimerInfoList::activateTimers() () from /usr/lib/libQt6Core.so.6
#16 0x00007a80e93c4bf4 in ?? () from /usr/lib/libQt6Core.so.6
#17 0x00007a80e7ef83ca in ?? () from /usr/lib/libglib-2.0.so.0
#18 0x00007a80e7f6beb8 in ?? () from /usr/lib/libglib-2.0.so.0
#19 0x00007a80e7ef9f42 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#20 0x00007a80e93c2a2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#21 0x00007a80e9155a6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#22 0x00007a80e914ff68 in QCoreApplication::exec() () from /usr/lib/libQt6Core.so.6
#23 0x00005750dbe3af90 in ?? ()
#24 0x00007a80e8a281ce in ?? () from /usr/lib/libc.so.6
#25 0x00007a80e8a2828a in __libc_start_main () from /usr/lib/libc.so.6
#26 0x00005750dbe3f675 in ?? ()

Reported using DrKonqi
Comment 1 zzyym 2024-09-19 09:47:48 UTC
It seems that vulkan render cause the problem, opengl render works well

config in `~/.config/kdeglobals`:

> [QtQuickRendererSettings]
> SceneGraphBackend=opengl

instead of

> [QtQuickRendererSettings]
> SceneGraphBackend=vulkan
Comment 2 Vlad Zahorodnii 2024-09-19 11:44:57 UTC
(In reply to zzyym from comment #1)
> It seems that vulkan render cause the problem, opengl render works well
> 
> config in `~/.config/kdeglobals`:
> 
> > [QtQuickRendererSettings]
> > SceneGraphBackend=opengl
> 
> instead of
> 
> > [QtQuickRendererSettings]
> > SceneGraphBackend=vulkan

Makes sense because kwin still doesn't support vulkan. On Wayland, kwin forces opengl for qtquick.
Comment 3 Bug Janitor Service 2024-09-19 15:08:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6428
Comment 4 David Redondo 2024-09-19 15:40:05 UTC
Git commit 2fb02e79c5ea9891064ce3efc88043d33a205a74 by David Redondo.
Committed on 19/09/2024 at 15:27.
Pushed by davidre into branch 'master'.

Enforce OpenGL for QtQuick on x11 when OpenGL compositing

Using some other graphics API like Vulkan for QtQuick
together with OpenGL is not not supported and can lead
to crashes.
FIXED-IN:6.2

M  +4    -0    src/compositor_x11.cpp

https://invent.kde.org/plasma/kwin/-/commit/2fb02e79c5ea9891064ce3efc88043d33a205a74
Comment 5 David Redondo 2024-09-19 15:54:30 UTC
Git commit 20552712e83793d2622af9c12e15d66008723d36 by David Redondo.
Committed on 19/09/2024 at 15:40.
Pushed by davidre into branch 'Plasma/6.2'.

Enforce OpenGL for QtQuick on x11 when OpenGL compositing

Using some other graphics API like Vulkan for QtQuick
together with OpenGL is not not supported and can lead
to crashes.
FIXED-IN:6.2


(cherry picked from commit 2fb02e79c5ea9891064ce3efc88043d33a205a74)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +4    -0    src/compositor_x11.cpp

https://invent.kde.org/plasma/kwin/-/commit/20552712e83793d2622af9c12e15d66008723d36