Enforce OpenGL for QtQuick on x11 when OpenGL compositing

Using some other graphics API like Vulkan for QtQuick
together with OpenGL is not not supported and can lead
to crashes.
BUG:493008
FIXED-IN:6.2


(cherry picked from commit 2fb02e79c5ea9891064ce3efc88043d33a205a74)

Co-authored-by: David Redondo <kde@david-redondo.de>